# Rust_FileHandeler

./: Cargo.toml  Makefile  README.md  build.rs  hls_converter.c  hls_converter.js  hls_converter.wasm  index.html  package.json  requirements.txt  server.py  wasm-pack.toml
CP/: CMakeLists.txt
CP/include/cp/: api.h  thumbnail.hpp
CP/src/: thumbnail.cpp
Editor/: build.sh  index.html
Editor/src/: editor.c  effects.js  preview.js  timeline.js
cpp/: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  README.md  RUNNING_GUIDE.md  build.sh  build_simple.sh  example_simple.html  package.json
cpp/example/: index.html
cpp/include/: emscripten_bindings.h  ffmpeg_wrapper.h  image_processor.h  memory_manager.h  simple_types.h  video_thumbnail_generator.h
cpp/src/: emscripten_bindings.cpp  ffmpeg_wrapper.cpp  image_processor.cpp  memory_manager.cpp  simple_emscripten_bindings.cpp  simple_image_processor.cpp  simple_memory_manager.cpp  simple_thumbnail_generator.cpp  video_thumbnail_generator.cpp
example/: index.html
src/: lib.rs
wasm/video-thumbnailer/: .gitignore  Cargo.toml
wasm/video-thumbnailer/src/: lib.rs
wasm/video_thumbnail/: CMakeLists.txt
wasm/video_thumbnail/include/video_thumbnail/: thumbnail.hpp
wasm/video_thumbnail/src/: bindings.cpp  ffmpeg_memory_io.hpp  thumbnail.cpp
